# ele585

./: .gitignore  Makefile  Makefile.am  autogen.sh  configure.ac  get-version  run-mpi.sh  run.sh  use-gcc.sh  use-icc.sh
final/: .gitignore  Makefile
final/script/: bmark-helper.sh  mpi.sh  prepare-data.sh  speed-test.sh  split-file.sh
final/src/: dp_quick_sort.hpp  insertion_sort.hpp  main-bmark.cpp  main-playground.cpp  quick_sort.hpp
problem1/: gen_random_numbers.py  run-mpi.sh  run.sh
problem1/src/parallel/: B.c  D.c  E.c  util.c
problem1/src/parallel_mpi/: G.c
script/: bmark-helper.sh  bmark.sh  gather.sh  gc.sh  mpi.sh  parallel.R  playground.sh  plot.R  raw-bmark.sh
src/: Makefile.am  bitonic_mpi.hpp  bitonic_playground.hpp  bitonic_remote.hpp  check_ordering.hpp  dp_quick_sort.hpp  fancy_choice.hpp  fast_random.hpp  finite_sort.hpp  generator.cpp  generator.h  logger.hpp  main-bmark.cpp  main-playground.cpp  main.cpp  main.h  quick_sort.hpp  sn-gen.cpp  sn.h  timed.hpp
src/parallel/: A.c  B.c  C.c  D.c  E.c  util.c  util.h
src/parallel_mpi/: F.c  G.c  H.c
